--- a/numberofseats.html
+++ b/numberofseats.html
@@ -361,6 +361,9 @@ Name: Siddarth Nair
                             </td>
                         </tr>
                     </table>
+                    <div id="inputInvalid" class="alert alert-warning margin-left10" style="display: none;">
+                        <strong>Please select atleast one seat in any category to proceed.</strong>
+                    </div>
                 </div>
 
             </div>
