--- a/numberofseats.html
+++ b/numberofseats.html
@@ -33,6 +33,21 @@ Name: Siddarth Nair
         </div>
     </div>
     <div class="container bg-light round-container">
+        <div class="row">
+            <div class="col-md-12 round-container margin-top10">
+                <div class="navibar" id="mynavibar">
+                    <a href="#home" class="navactive">Home</a>
+                    <a href="#kidsclub">Kids Club</a>
+                    <a href="#eventcinema">Event Cinema</a>
+                    <a href="#comingsoon">Coming Soon</a>
+                    <a href="#competitions">Competitions</a>
+                    <a href="#themezz">The Mezz</a>
+                    <a href="#contactus">Contact Us</a>
+                    <a href="#about">About</a>
+                    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="MakeNavResponsive()">&#9776;</a>
+                </div>
+            </div>
+        </div>
         <br/>
         <div class="col-md-12 text-center round-corners2">
 
@@ -389,6 +404,29 @@ Name: Siddarth Nair
             </div>
         </div>
         <br/>
+    </div>
+    <br/>
+    <div class="container bg-light round-container">    
+        <div class="row">
+            <div class="col-md-3">
+                <h6>GOT A QUESTION</h6>
+                <p class="movie-tag-text">
+                    <img src="images/faq.gif" class="imgwidth25"></img>&nbsp;Our knowledge base contains answers to frequently asked questions.</p>
+            </div>
+            <div class="col-md-3">
+                <h6>STAY CONNECTED TO THE MOVIES</h6>
+                <p class="movie-tag-text">
+                    <img src="images/youtube.png" class="imgwidth25"></img>&nbsp;Watch us on YouTube</p>
+            </div>
+            <div class="col-md-3">
+                <h6>CINEMA INFORMATION</h6>
+                <p class="movie-tag-text">FAQ</p>
+            </div>
+            <div class="col-md-3">
+                <h6>CONTACT</h6>
+                <p class="movie-tag-text"> Movies@Dundrum Dundrum Town Centre Dundrum, Dublin 14, Ireland Film Information and Bookings: 1520 880 333</p>
+            </div>
+        </div>
     </div>
     <br/>
     <br/>
