--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Name: Siddarth Nair
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 	<script src="app.js"></script>
 	<link rel="manifest" href="manifest.json">
@@ -39,16 +39,17 @@ Name: Siddarth Nair
 					</svg> -->
 			<!-- <img src="images/ajax-loader.gif"> -->
 		</div>
+		
 		<div class="row">
 			<div class="col-md-12 round-container margin-top10">
 				<div class="navibar" id="mynavibar">
-					<a href="#home" class="navactive">Home</a>
+					<a href="index.html" class="navactive">Home</a>
 					<a href="#kidsclub">Kids Club</a>
 					<a href="#eventcinema">Event Cinema</a>
 					<a href="#comingsoon">Coming Soon</a>
 					<a href="#competitions">Competitions</a>
 					<a href="#themezz">The Mezz</a>
-					<a href="#contactus">Contact Us</a>
+					<a href="contactus.html">Contact Us</a>
 					<a href="#about">About</a>
 					<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="MakeNavResponsive()">&#9776;</a>
 				</div>
