--- a/numberofseats.html
+++ b/numberofseats.html
@@ -36,13 +36,13 @@ Name: Siddarth Nair
         <div class="row">
             <div class="col-md-12 round-container margin-top10">
                 <div class="navibar" id="mynavibar">
-                    <a href="#home" class="navactive">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="#kidsclub">Kids Club</a>
                     <a href="#eventcinema">Event Cinema</a>
                     <a href="#comingsoon">Coming Soon</a>
                     <a href="#competitions">Competitions</a>
                     <a href="#themezz">The Mezz</a>
-                    <a href="#contactus">Contact Us</a>
+                    <a href="contactus.html">Contact Us</a>
                     <a href="#about">About</a>
                     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="MakeNavResponsive()">&#9776;</a>
                 </div>
